# stock-investing

./: .flake8  .gitignore  .isort.cfg  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: env.secrets.sample.txt  main.py  sample_db_collection.json
src/apis/: APIS_DOCUMENTATION.md  api.py
src/apis/financial_modeling_prep/: api_financial_modeling_prep.py  financial_modeling_prep_enum.py
src/apis/financial_modeling_prep/financial_statements/: financial_statements_enum.py
src/apis/financial_modeling_prep/fundamentals_analysis/: fundamentals_analysis_enum.py
src/apis/sec/: api_sec.py  company_concept_enum.py  validate_functions.py
src/apis/sec/schemas/: company_concept_schema.py  company_facts_schema.json  company_facts_schema.py  company_tickers_exchange_schema.json  sec_schemas.py  (+2 more)
src/domain/: stock_investing_exception.py
src/domain/balance_sheet_statement/: assets.py  balance_sheet_statement.py  liabilities.py  shareholders_equity.py
src/domain/free_cash_flow_statement/: cash_flow_statement.py  financing_activities.py  investing_activities.py  operating_activities.py
src/domain/magic_formula/: magic_formula.py  magic_formula_item.py
src/exceptions/: api_request_exception.py  stock_investing_exception.py
src/infrastructure/apis/: APIS_DOCUMENTATION.md  api.py
src/resources/sic/: sic_codes.csv  what_are_sic_and_naics_codes.md
src/shared/: config.py  general_functions.py  io_files.py
tests/unit/apis/: test_api.py
tests/unit/exceptions/: test_api_request_exception.py  test_stock_investing_exception.py
(+77 files in other folders)
